tests/error_checks/bind5.si
unit foo(inout uint2 a)
{
  always {
    a.oenable = 2b11;
    a.o       = 2b01;
  }
}

unit main(inout uint2 tmp,output uint8 leds)
{
  
  foo f(
    a <:> tmp[0,2]  // error: used in body below
  );
  
  algorithm {
    uint1 p = tmp.i & 1b1;
    __display("hello world");
  }

}
